# bartosz-dev-bridge

./: .ghb1b-final-ci-trigger  .ghb1b-lexical-final-trigger  .ghb1c-final-ci-trigger  .ghb1c-final-ci-trigger-2  .ghb2a-targeted-trigger  .gitignore  POC_0B_WINDOWS_START.md  POC_0_WINDOWS_START.md  README.md  poc_bridge.py  pyproject.toml
.github/: ghb1b-final-ci-trigger.txt  ghb1b-trigger.txt
bdb-poc-fixture/: pyproject.toml
bdb_bartosz_os/: __init__.py  adapter.py  manifest.py
bdb_bridge/: __init__.py  __main__.py  background_start_diagnostics.py  cli.py  code_relationship_analyzer.py  code_relationship_cli.py  code_relationship_journal.py  code_relationship_migration.py  code_relationship_models.py  code_relationship_service.py  command_timing.py  config.py  context_pack_models.py  context_pack_service.py  edit_operation_models.py  edit_operation_parser.py  execution.py  file_classifier.py  fixed_test_profile_support.py  fixed_test_profiles.py  ghb07_cli.py  ghb07_composition.py  git_command_transport.py  git_object_reader.py  git_status_untracked_hotfix.py  heartbeat.py  ingestion.py  ingestion_validate.py  instance_lock.py  journal.py  journal_ingestion.py  local_mirroring_outbox.py  local_result_sink.py  local_spool_cli.py  local_spool_transport.py  local_wake.py  manual_preserve.py  migrations.py  models.py  multi_file_patch_checkpoint_hook.py  (+75 more)
bdb_gui/: __init__.py  app.py  bootstrap.py  current_operation.py  current_operation_view.py  dashboard.py  diagnostics.py  diagnostics_tasks.py  diagnostics_view.py  history.py  history_view.py  main_window.py  operation_flow.py  operations.py  project_creator.py  project_creator_view.py  project_creator_worker.py  project_window.py  project_workers.py  projects.py  projects_view.py  runtime_paths.py  session_history.py  session_history_view.py  session_history_view_hardening.py  session_history_window.py  session_history_worker.py  state.py  style.py  tray.py  tray_window.py  version.py  workers.py
bdb_integrations/: __init__.py  gicleeapp.py
bdb_operator/: __init__.py  api.py  cli.py  errors.py  models.py  observability.py  operator.py  project_creator.py  project_creator_hardening.py  runner.py  (+2 more)
(+359 files in other folders)
