[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bartosz-dev-bridge"
version = "0.2.0"
description = "Bounded ChatGPT-to-local-workspace bridge with tested edits and verified fast-forward promotion"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
bdb = "bdb_bridge.cli:main"
bdb-native-host = "bdb_bridge.native_host:main"

[tool.setuptools.packages.find]
include = ["bdb_bridge*", "bdb_poc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
