[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bartosz-dev-bridge"
version = "0.2.1"
description = "Bounded ChatGPT-to-local-workspace bridge with tested edits and verified fast-forward promotion"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8,<9"]
gui = ["PySide6-Essentials>=6.10,<6.12"]
gui-spike = ["PySide6-Essentials>=6.10,<6.12"]
release = ["PyInstaller>=6.14,<7"]

[project.scripts]
bdb = "bdb_bridge.cli:main"
bdb-native-host = "bdb_bridge.native_host:main"
bdb-operator = "bdb_operator.cli:main"
bdb-control-center = "bdb_gui.app:main"

[tool.setuptools.packages.find]
include = [
  "bdb_bridge*",
  "bdb_operator*",
  "bdb_gui*",
  "bdb_release*",
  "bdb_bartosz_os*",
  "bdb_integrations*",
  "bdb_poc*"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
